--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
+        with:
+            charts_dir: deploy/k8s/helm
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
